# atlaswm

./: Cargo.toml  README.md  rust-toolchain.toml
atlas-animation/: Cargo.toml
atlas-animation/src/: lib.rs
atlas-config/: Cargo.toml
atlas-config/src/: lib.rs
atlas-core/: Cargo.toml
atlas-core/src/: eventbus.rs  lib.rs  state.rs
atlas-core/src/backend/: mod.rs  udev.rs  winit.rs
atlas-input/: Cargo.toml
atlas-input/src/: lib.rs
atlas-ipc/: Cargo.toml
atlas-ipc/src/: lib.rs
atlas-layout/: Cargo.toml
atlas-layout/src/: lib.rs
atlas-output/: Cargo.toml
atlas-output/src/: lib.rs
atlas-plugin/: Cargo.toml
atlas-plugin-api/: Cargo.toml
atlas-plugin-api/src/: lib.rs
atlas-plugin/src/: lib.rs
atlas-render/: Cargo.toml
atlas-render/src/: lib.rs
atlas-space/: Cargo.toml
atlas-space/src/: lib.rs
atlas-wm/: Cargo.toml
atlas-wm/src/: lib.rs
atlasfetch/: .gitignore  Cargo.toml  README.md  flake.nix
atlasfetch/logos/: centos  debian  endeavouros  fedora  garuda  gentoo  mint  opensuse  slackware  solus  ubuntu  void
atlasfetch/src/: ascii.rs  cli.rs  config.rs  info.rs  layout.rs  main.rs  render.rs  theme.rs
atlasfetch/src/tui/: app.rs  mod.rs
compositor/: Cargo.toml
compositor/src/: main.rs
scripts/: test-udev.sh
