[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atlas-config = { path = "../atlas-config" }
atlas-space = { path = "../atlas-space" }
smithay = { path = "/home/charlie/smithay", features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "wayland_frontend",
    "renderer_gl",
    "renderer_multi",
    "desktop",
] }
smithay-drm-extras = { path = "/home/charlie/smithay/smithay-drm-extras" }
tracing = "0.1"
calloop = { version = "0.14", features = ["signals"] }
