[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atlas-config = { path = "../atlas-config" }
atlas-space = { path = "../atlas-space" }
smithay = { git = "https://github.com/Smithay/smithay", rev = "3021f619e2ae4dab8bfb1e21f3f210923b9b6582", default-features = false, features = ["backend_drm", "backend_gbm", "backend_libinput", "backend_udev", "backend_winit", "backend_egl", "backend_x11", "renderer_gl", "renderer_multi", "wayland_frontend", "xwayland", "desktop", "backend_session_libseat"] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "3021f619e2ae4dab8bfb1e21f3f210923b9b6582" }
tracing = "0.1"
calloop = { version = "0.14", features = ["signals"] }
xcursor = "0.3"
