[package]
name = "atlasfetch"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Centered ASCII art with powerline panels — system information for atlasWM"

[[bin]]
name = "atlasfetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
color-eyre = "0.6"
libc = "0.2"
directories = "6"
unicode-width = "0.2"
regex = "1"
